<resources>
    <string name="app_name">Movie Night Planner</string>
    <string name="edit_title_title">Title</string>
    <string name="edit_title_venue">Venue</string>
    <string name="edit_title_sdate">Start Date</string>
    <string name="edit_title_edate">End Date</string>
    <string name="button_delete_event">Delete this event</string>
    <string name="button_incsort">Ascending sort</string>
    <string name="button_decsort">descending sort</string>
    <string name="button_submit">Submit</string>
    <string name="actionbar_add">Add new event</string>
    <string name="addid">ID</string>
    <string name="sumbit_message">You must complete all the fields to submit changes</string>
    <string name="ok">OK</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="Location">Location</string>
    <string name="Movie">Movie</string>
    <string name="AddMovie">Add Movie Details</string>
    <string name="ReleaseYear">Release Year</string>
    <string name="select">Select</string>
    <string name="numofattend">Number Of Attendees</string>
    <string name="addattendee">Add Attendee</string>
    <string name="attendees">Name Of Attendees(Optional)</string>
    <string name="calander">View By Calender</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="addeveonthisdate">Add Event On This Date</string>
    <string name="removeattendee">Remove Attendee</string>
    <string name="selectfrommenu">Add move from menu,or delete movie title to delete movie</string>
    <string name="edit">Edit</string>
    <string name="Movieoptional">Movie(Optional)</string>
    <string name="settings">Settings</string>
    <string name="notificationsettings">Notification Settings</string>
    <string name="thresholdsummary">How long prior an event to push notifications</string>
    <string name="thresholdtitle">Notification threshold</string>
    <string name="durationtitle">Remind again duration</string>
    <string name="durationsummary">How long to remind again</string>
    <string name="period">Notification period</string>
    <string name="period2">How often to check distance of events</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="Cancelthisevent">Cancel this event?</string>
    <string name="mapview">Map View</string>

    <string-array name="month">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string-array name="year">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string name="title_activity_map_view">Map</string>
</resources>
