<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calander_root"
    android:descendantFocusability="blocksDescendants"
    tools:context=".view.CalenderView">

    <RelativeLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/calander_year"
            android:layout_width="@dimen/eventlistmagtop"
            android:layout_height="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/Editmagend"
            android:layout_marginEnd="@dimen/Editmagstart" />

        <Spinner
            android:id="@+id/calander_month"
            android:layout_width="@dimen/eventlistmagtop"
            android:layout_height="@dimen/dp20"
            android:layout_marginTop="@dimen/Editmagend"
            android:layout_marginStart="@dimen/dp20"
            android:layout_toEndOf="@+id/calander_year"/>

        <LinearLayout
        android:id="@+id/calendar_xingqi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/magbetweentextview"
            android:layout_below="@+id/calander_month"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sunday"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/monday"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tuesday"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wednesday"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/thursday"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/friday"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/saturday"
            android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp340"
            android:layout_below="@+id/calendar_xingqi"
            android:verticalSpacing="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/sortbuttonmagatart"
            android:paddingTop="@dimen/dp20"
            android:gravity="center"
            android:layout_above="@+id/addattendee"
            android:layout_alignRight="@id/calendar_xingqi"
            android:layout_alignLeft="@id/calendar_xingqi"
            android:numColumns="7" />

        <TextView
            android:id="@+id/dateselected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_below="@id/calendar_grid"
            android:text="TextView" />

        <Button
        android:id="@+id/button_addeventonthisdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
            android:layout_centerVertical="true"
        android:text="@string/addeveonthisdate"
        android:textSize="20sp"
        android:layout_below="@+id/dateselected"
            android:layout_marginTop="@dimen/magbetweentextview"/>



        <ListView
            android:id="@+id/eventviewoncalander"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/magbetweentextview"
            android:layout_below="@+id/button_addeventonthisdate"
            android:layout_marginTop="@dimen/dp20"
            android:paddingLeft="@dimen/eventlistpadleft" />
    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>